create main and other images rest added
